--- a/ecs-2.yml
+++ b/ecs-2.yml
@@ -117,7 +117,7 @@ Resources:
     Properties:
       Family: aws-ecs-typescript-task
       Cpu: 256
-      Memory: 512
+      Memory: '512'
       NetworkMode: awsvpc
       ExecutionRoleArn: !Ref ExecutionRole
       TaskRoleArn: !Ref TaskRole
@@ -186,7 +186,7 @@ Resources:
        - Type: "redirect"
          RedirectConfig:
            Protocol: "HTTPS"
-           Port: 443
+           Port: '443'
            Host: "#{host}"
            Path: "/#{path}"
            Query: "#{query}"
